--- a/Dockerfile_api
+++ b/Dockerfile_api
@@ -1,22 +1,15 @@
 
-
-# Use the official Python image from the Docker Hub
 FROM python:3.11-slim
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy the requirements file into the container
-COPY requirements.txt .
+ENV PYTHONUNBUFFERED=1
 
-# Install the dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code into the container
 COPY . /app
 
-# Expose the port the app runs on
 EXPOSE 8181
 
-# Command to run the application
-CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8181"]
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8181"]
